// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTitle does not update title with existing content when pasting HTML 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading">Howdy</h2>
<!-- /fp:heading -->

<!-- fp:heading -->
<h2 class="fp-block-heading">This is a heading.</h2>
<!-- /fp:heading -->

<!-- fp:paragraph -->
<p>This is a paragraph.</p>
<!-- /fp:paragraph -->"
`;

exports[`PostTitle populates empty title with first block content when pasting HTML 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading">This is a heading.</h2>
<!-- /fp:heading -->

<!-- fp:paragraph -->
<p>This is a paragraph.</p>
<!-- /fp:paragraph -->"
`;
